--- a/src/print/Principal.form
+++ b/src/print/Principal.form
@@ -76,7 +76,7 @@
                                   <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="32" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="btnMecanicos" alignment="0" max="32767" attributes="0"/>
                                   <Component id="btnServicios" alignment="0" max="32767" attributes="0"/>
@@ -150,7 +150,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="0" green="0" red="0" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="BIENVENIDO"/>
+                <Property name="text" type="java.lang.String" value="BIENVENIDO A RIP "/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="btnUsuarios">
